[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchkld"
version = "2024.10.1"
dependencies = [
  "torch>=2.0.1",
]
requires-python = ">=3.8"
authors = [
  {name = "Butakov Ivan", email = "vanessbut@yandex.com"},
]
maintainers = [
  {name = "Butakov Ivan", email = "vanessbut@yandex.com"}
]
description = "Kullback-Leibler divergence estimation via variational bounds optimization in PyTorch"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Kullback-Leibler", "mutual information", "information theory"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
Repository = "https://github.com/VanessB/pytorch-kld.git"
"Bug Tracker" = "https://github.com/VanessB/pytorch-kld/issues"
Changelog = "https://github.com/VanessB/pytorch-kld/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["source/python/torchkld"]